# surfer-agent

./: README.md  pyproject.toml
src/surfer_agent/: __init__.py
src/surfer_agent/agents/: repo_agent.py  web_agent.py
src/surfer_agent/utils/: web_utils.py
